--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-    "name": "elementos-parser",
-    "version": "0.0.0",
-    "description": "parser for elementos lan",
+    "name": "derivaciones",
+    "version": "1.0.0",
+    "description": "validador de derivaciones",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
-        "parser",
-        "elementos",
-        "unq"
+      "parser",
+      "elementos",
+      "unq"
     ],
     "author": "Alejandro Castro <alejandrocastrounqui@gmail.com>",
     "license": "ISC",
+    "engines": {
+      "node": "~6.0.0"
+    },
+    "scripts": {
+      "bower":    "bower",
+      "grunt":    "grunt",
+      "markserv": "markserv"
+    },
     "devDependencies": {
-        "jison": "^0.4.17",
-        "connect-livereload": "~0.4.0",
-        "grunt": "~0.4.4",
-        "grunt-angular-templates": "^0.5.7",
-        "grunt-bake": "^1.5.0",
-        "grunt-concurrent": "~0.5.0",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-coffee": "~0.10.1",
-        "grunt-contrib-compass": "~0.7.2",
-        "grunt-contrib-concat": "~0.5.1",
-        "grunt-contrib-connect": "~0.7.1",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-cssmin": "~0.12.2",
-        "grunt-contrib-htmlmin": "~0.2.0",
-        "grunt-contrib-jasmine": "~0.4.0",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-less": "~0.11.0",
-        "grunt-contrib-uglify": "~0.4.0",
-        "grunt-contrib-sass": "^0.9.2",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-html-angular-validate": "~0.4.0",
-        "grunt-open": "~0.2.3",
-        "grunt-preprocess": "~4.1.0",
-        "grunt-string-replace": "~1.0.0",
-        "grunt-svgmin": "~0.4.0",
-        "grunt-usemin": "~2.1.1",
-        "load-grunt-tasks": "~0.4.0",
-        "requirejs": "^2.1.15",
-        "time-grunt": "~0.3.1"
+      "jison":                                 "0.4.17",
+      "connect-livereload":                    "0.6.0",
+      "bower":                                 "1.8.0",
+      "grunt":                                 "0.4.5",
+      "grunt-cli":                             "1.2.0",
+      "grunt-angular-templates":               "1.1.0",
+      "grunt-bake":                            "1.8.0",
+      "grunt-concurrent":                      "1.0.1",
+      "grunt-contrib-clean":                   "0.6.0",
+      "grunt-contrib-coffee":                  "1.0.0",
+      "grunt-contrib-concat":                  "1.0.1",
+      "grunt-contrib-connect":                 "0.9.0",
+      "grunt-contrib-copy":                    "1.0.0",
+      "grunt-contrib-cssmin":                  "2.2.0",
+      "grunt-contrib-htmlmin":                 "2.4.0",
+      "grunt-contrib-uglify":                  "1.0.2",
+      "grunt-contrib-sass":                    "1.0.0",
+      "grunt-contrib-watch":                   "1.0.0",
+      "grunt-html-angular-validate":           "0.5.8",
+      "grunt-preprocess":                      "5.1.0",
+      "grunt-string-replace":                  "1.3.1",
+      "grunt-usemin":                          "3.1.1",
+      "load-grunt-tasks":                      "3.5.2",
+      "mkdirp":                                "0.5.1",
+      "markserv":                              "0.1.1"
     },
     "dependencies": {
-        "mkdirp": "^0.5.1"
+
     }
 }
